# novabrew

.github/workflows/: deploy.yml
dev/: INSTALL.md
dev/WE56570-1117-2024/: WE56570-1117-2024.md
dev/funstuff/: oopsie.txt  pyproject.toml  pytest.ini  setup_game_project.py
dev/funstuff/src/pygamie/: game.py
dev/funstuff/src/pygamie/components/: component_manager.py  door.py  game_state.py  hud.py  inventory.py  item.py  minimap.py  player.py  room.py  tile.py
dev/funstuff/src/pygamie/display/: display_engine.py  renderer.py
dev/funstuff/src/pygamie/engine/: game_engine.py
dev/funstuff/src/pygamie/events/: event_manager.py
dev/funstuff/src/pygamie/items/: potion.py  weapon.py
dev/funstuff/src/pygamie/levels/: level1.py
dev/funstuff/src/pygamie/scenes/: scene_manager.py
dev/funstuff/src/pygamie/states/: game_state.py  state_manager.py
dev/funstuff/src/pygamie/utils/: constants.py  level_loader.py  resource_manager.py
dev/funstuff/tests/: test_game.py
dev/work_effort_manager/: pyproject.toml
dev/work_effort_manager/src/work_effort_manager/: cli.py  unpack.py  unpack_all.py  unpack_templates.py  unpack_work_effort.py
dev/work_effort_manager/src/work_effort_manager/commands/: base.py
dev/work_effort_manager/src/work_effort_manager/managers/: template.py  work_effort.py
novabrew/: package-lock.json  package.json
novabrew/src/: App.css  App.jsx
novabrew/src/components/: GameHUD.jsx  GameScene.jsx  Logo.jsx  TestPanel.jsx
novabrew/src/services/: gameService.js  llamaService.js
novabrew/src/tests/: model_tests.sh
(+2 files in other folders)
